syntax = "proto3";
option csharp_namespace = "Grpc";
package Orders;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse);
    rpc SetOrderCompleted (SetOrderCompletedRequest) returns (SetOrderCompletedResponse);
}

message CreateOrderRequest {
    string user_id = 1;
    string item_id = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string order_id = 1;
}

message CancelOrderRequest {
    string order_id = 1;
}

message CancelOrderResponse {
    bool is_success = 1;
}

message SetOrderCompletedRequest {
    string order_id = 1;
}

message SetOrderCompletedResponse {
    bool is_success = 1;
}
